--- a/Index.html
+++ b/Index.html
@@ -1869,7 +1869,7 @@
         }
 
         .chapter567-header p {
-            text-align: justify;
+            
             font-size: 1.2857142858rem;
     font-weight: 400;
     line-height: 1.3;
@@ -2121,7 +2121,7 @@
     <section class="chapter567">
         <div class="chapter567-header">
             <h2>Why Gokarna?</h2><br><br>
-            <p> Gokarna, often referred to as the 'Kashi of the South,' holds immense spiritual significance for
+            <p style="text-align: justify;"> Gokarna, often referred to as the 'Kashi of the South,' holds immense spiritual significance for
                 ancestral
                 rituals such as Narayanbali, Nagabali, and PitruDosha Nivarana. Home to the sacred Mahabaleshwar Temple
                 and
