--- a/Pooja.html
+++ b/Pooja.html
@@ -1352,9 +1352,7 @@
                 believed to be a powerful site for resolving curses and doshas caused by harming serpents or disrupting
                 their sacred habitats. According to Vedic scriptures, the divine presence in Gokarna amplifies the
                 effects of the Nagabali ritual, ensuring that serpent-related karmic imbalances are addressed
-                effectively. The tranquil atmosphere and sacred energy of this holy town provide the perfect environment
-                for devotees to seek forgiveness from serpent deities, remove obstacles, and restore harmony in their
-                lives.</p>
+                effectively. </p>
         </div>
     </section>
 
