--- a/Index.html
+++ b/Index.html
@@ -1549,7 +1549,7 @@
         .hero-section {
             position: relative;
             width: 100%;
-            height: 60vh;
+            height: 80vh;
             overflow: hidden;
 
         }
@@ -1764,8 +1764,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 10px;
-            padding-bottom: 5rem;
+            /* padding-top: 10px;
+            padding-left: 10px;
+            padding-right: 10px; */
+            margin-bottom: 5rem;
         }
 
         .hero-section .column .icon {
