--- a/Index.html
+++ b/Index.html
@@ -1764,9 +1764,9 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            /* padding-top: 10px;
+           
             padding-left: 10px;
-            padding-right: 10px; */
+            padding-right: 10px; 
             margin-bottom: 5rem;
         }
 
