--- a/Index.html
+++ b/Index.html
@@ -219,29 +219,37 @@
             position: relative;
             display: inline-block;
             z-index: 10;
+            border-radius: 1rem;
             /* Ensure the dropdown stays above other elements */
         }
 
         .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: white;
-            min-width: 250px;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-            /* Higher z-index to bring dropdown above the Hero section */
-        }
+    border-radius: 1rem;
+    display: none;
+    position: absolute;
+    background: rgb(255 255 255 / 66%); /* Semi-transparent background */
+    backdrop-filter: blur(10px); /* Blur effect for glassmorphism */
+    min-width: 250px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1000; /* Higher z-index to bring dropdown above the Hero section */
+    padding: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.3); /* Subtle border */
+}
 
-        .dropdown-content a {
-            color: #10375C;
-            padding: 10px 16px;
-            text-decoration: none;
-            display: block;
-        }
+/* Adjust dropdown links for better visibility */
+.dropdown-content a {
+    color: #fff; /* White text for contrast */
+    padding: 10px 16px;
+    text-decoration: none;
+    display: block;
+    font-weight: bold;
+}
 
-        .dropdown-content a:hover {
-            background-color: #e1c99c;
-        }
+/* Hover effect */
+.dropdown-content a:hover {
+    background-color: #e1c99c; /* Soft hover effect */
+}
+
 
         .dropdown.open .dropdown-content {
             display: block;
@@ -1852,36 +1860,33 @@
         }
 
         .chapter567-header h2 {
-            text-align: center;
-            font-size: 2.2857142858rem;
-            font-weight: 600;
-            line-height: 1.2;
-            margin-bottom: .5rem;
             color: #373f27;
+            font-size: 2.2875rem;
+            font-weight: 600;
+            line-height: 2rem;
+            margin-bottom: 1rem;
             font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-
-            /* Space below the heading */
         }
 
         .chapter567-header p {
-            text-align: center;
-            font-size: 1.2857142857rem;
-            line-height: 1.875rem;
-            font-weight: 400;
-            color: #373f27;
-            font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-
+            
+            font-size: 1.2857142858rem;
+    font-weight: 400;
+    line-height: 1.3;
+    color: #373f27;
+    font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    margin-bottom: 1px;
         }
 
         /* Responsive Design */
         @media (max-width: 768px) {
             .chapter567-header h2 {
-                font-size: 28px;
+                font-size: 2.28rem;
                 /* Smaller heading on mobile */
             }
 
             .chapter567-header p {
-                font-size: 16px;
+                font-size: 1.28rem;
                 /* Smaller subheading on mobile */
             }
         }
@@ -1994,6 +1999,8 @@
                         <!-- <a href="#">Nagabali Pooja</a> -->
                         <a href="Pooja1.html">PitruDosha Nivarana
                         </a>
+                        <a href="Pooja3.html">Thripindi Shraddha
+                        </a>
                     </div>
                 </li>
                 <li><a href="Contact.html">Contact Us</a></li>
@@ -2022,6 +2029,8 @@
                     <a href="Pooja.html">Nagabali Pooja</a>
                     <!-- <a href="#">Nagabali Pooja</a> -->
                     <a href="Pooja1.html">PitruDosha Nivarana
+                    </a>
+                    <a href="Pooja3.html">Thripindi Shraddha
                     </a>
                 </div>
             </li>
@@ -2108,24 +2117,11 @@
         </div>
         <hr class="custom-hr">
     </section>
-    <!-- <section id="section2">
-        <h2>Why Gokarna:</h2><br>
-
-        <p>
-            Gokarna, often referred to as the 'Kashi of the South,' holds immense spiritual significance for ancestral
-            rituals such as Narayanbali, Nagabali, and PitruDosha Nivarana. Home to the sacred Mahabaleshwar Temple and
-            the divine Atma-Linga of Lord Shiva, this holy town is revered as a powerful center for resolving ancestral
-            karmas and liberating departed souls. Ancient scriptures like the Skanda Purana emphasize the transformative
-            spiritual benefits of performing these Poojas in Gokarna, where the divine energy amplifies the efficacy of
-            rituals. By conducting these sacred ceremonies here, devotees not only honor their forefathers but also seek
-            blessings for peace, prosperity, and harmony in their lives, making Gokarna a uniquely blessed destination
-            for ancestral worship.
-        </p>
-    </section> -->
+   
     <section class="chapter567">
         <div class="chapter567-header">
             <h2>Why Gokarna?</h2><br><br>
-            <p> Gokarna, often referred to as the 'Kashi of the South,' holds immense spiritual significance for
+            <p style="text-align: justify;"> Gokarna, often referred to as the 'Kashi of the South,' holds immense spiritual significance for
                 ancestral
                 rituals such as Narayanbali, Nagabali, and PitruDosha Nivarana. Home to the sacred Mahabaleshwar Temple
                 and
