--- a/Index.html
+++ b/Index.html
@@ -764,173 +764,208 @@
 
 
 
-       /* Popup Background */
-#popupOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    padding: 10px;
-    box-sizing: border-box;
-}
+        /* Popup Background */
+        #popupOverlay {
 
-/* Popup Content */
-#popupForm {
-    background-image: linear-gradient(#e1c99cdc, rgba(240, 231, 216, 0.886)), 
-        url('Screenshot%202025-01-30%20233743.png');
-    padding: 20px;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 400px; /* Ensures it doesn't exceed this size */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
-    text-align: left;
-    overflow: hidden;
-    max-height: 650px;
-    height: auto;
-}
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            padding: 10px;
+            box-sizing: border-box;
+        }
 
-/* Label Styling */
-label {
-    display: block;
-}
+        /* Popup Content */
+        #popupForm h2 {
+            text-align: center;
+            /* Horizontally centers the text */
+            margin: 0 0 20px 0;
+            /* Adds space below the heading */
+            color: #990000;
+        }
 
-/* Close Button */
-#closeBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
-    border: none;
-    font-size: 30px;
-    cursor: pointer;
-    animation: pulse 1.5s infinite;
-}
+        #popupForm {
+            background-image: linear-gradient(#e1c99cdc, rgba(240, 231, 216, 0.886)),
+                url('Screenshot%202025-01-30%20233743.png');
+            /* background: linear-gradient(135deg, #e1c99c, rgb(240 231 216)); */
+            /* Orange-yellow light gradient */
+            padding: 20px;
+            /* Reduced padding */
+            border-radius: 10px;
+            width: 400px;
+            max-width: 100%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
+            text-align: left;
+            overflow: hidden;
+            /* Ensures close button stays inside */
+            max-height: 650px;
+            /* Set max height to 650px */
+            height: auto;
+            /* Ensures the height adjusts based on content */
+        }
 
-/* Pulse Animation */
-@keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.2); }
-    100% { transform: scale(1); }
-}
+        /* Label Styling */
+        label {
 
-/* Form Fields */
-input, select, textarea {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    border: 1px solid #636b46;
-    box-sizing: border-box;
-    font-size: 16px;
-}
+            display: block;
+            /* Ensures label is a block element */
+        }
 
-/* Textarea */
-textarea {
-    height: 80px;
-}
+        /* Close Button */
+        #closeBtn {
+            position: absolute;
+            top: 10px;
+            /* Close button inside the box */
+            right: 10px;
+            /* Adjusted to place inside the box */
+            background-color: transparent;
+            border: none;
+            font-size: 30px;
+            /* Increased size */
+            cursor: pointer;
+            animation: pulse 1.5s infinite;
+        }
 
-/* Button Styles */
-.button-8766 {
-    all: unset;
-    width: 100px;
-    height: 40px;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    position: relative;
-    color: #f0f0f0;
-    cursor: pointer;
-    z-index: 1;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
+        /* Pulse Animation */
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
 
-.button-8766::after, .button-8766::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -99999;
-    transition: all .4s;
-}
+            50% {
+                transform: scale(1.2);
+            }
 
-.button-8766::before {
-    transform: translate(0%, 0%);
-    width: 100%;
-    height: 100%;
-    background: #636b46;
-    border-radius: 10px;
-}
+            100% {
+                transform: scale(1);
+            }
+        }
 
-.button-8766::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
+        /* Form Fields */
+        input,
+        select,
+        textarea {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 5px;
+            /* Reduced margin below fields */
+            border-radius: 5px;
+            border: 1px solid #636b46;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
 
-.button-8766:hover::before {
-    transform: translate(5%, 20%);
-    width: 110%;
-    height: 110%;
-}
+        /* Textarea */
+        textarea {
+            height: 80px;
+            /* Reduced height for textarea */
+        }
 
-.button-8766:hover::after {
-    border-radius: 10px;
-    transform: translate(0, 0);
-    width: 100%;
-    height: 100%;
-}
+        /* Button Styles */
+        .button-8766 {
+            all: unset;
+            width: 100px;
+            height: 40px;
+            font-size: 16px;
+            background: transparent;
+            border: none;
+            position: relative;
+            color: #f0f0f0;
+            cursor: pointer;
+            z-index: 1;
+            padding: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            white-space: nowrap;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
 
-.button-8766:active::after {
-    transition: 0s;
-    transform: translate(0, 5%);
-}
+        .button-8766::after,
+        .button-8766::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: -99999;
+            transition: all .4s;
+        }
 
-/* Media Queries for responsiveness */
-@media screen and (max-width: 768px) {
-    #popupForm {
-        width: 95%;
-        padding: 15px;
-    }
+        .button-8766::before {
+            transform: translate(0%, 0%);
+            width: 100%;
+            height: 100%;
+            background: #636b46;
+            border-radius: 10px;
+        }
 
-    #closeBtn {
-        font-size: 35px;
-    }
-}
+        .button-8766::after {
+            transform: translate(10px, 10px);
+            width: 35px;
+            height: 35px;
+            background: #ffffff15;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border-radius: 50px;
+        }
 
-@media screen and (max-width: 480px) {
-    .button-8766 {
-        font-size: 14px;
-        padding: 8px 16px;
-    }
+        .button-8766:hover::before {
+            transform: translate(5%, 20%);
+            width: 110%;
+            height: 110%;
+        }
 
-    #popupForm {
-        width: 95%;
-        padding: 12px;
-    }
+        .button-8766:hover::after {
+            border-radius: 10px;
+            transform: translate(0, 0);
+            width: 100%;
+            height: 100%;
+        }
 
-    #closeBtn {
-        font-size: 40px;
-    }
-}
+        .button-8766:active::after {
+            transition: 0s;
+            transform: translate(0, 5%);
+        }
 
+        /* Media Queries for responsiveness */
+        @media screen and (max-width: 768px) {
+            #popupForm {
+                width: 90%;
+                padding: 15px;
+                /* Reduced padding */
+            }
+
+            #closeBtn {
+                font-size: 35px;
+                /* Slightly bigger close button on smaller screens */
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .button-8766 {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
+
+            #popupForm {
+                width: 90%;
+                padding: 15px;
+            }
+
+            #closeBtn {
+                font-size: 40px;
+                /* Close button even bigger for small screens */
+            }
+        }
 
         /* Scoped styles inside .testimonial-section */
         .testimonial-section {
